Improve the code and integrate the task API, add support for View, Aida features, and bug fixes.